<resources>
    <string name="app_name">FaceStory</string>
    <string name="app_title">FaceStory</string>
    <string name="sign_up_info">Regist your info</string>
    <string name="title">FaceStory</string>
    <string name="receive_message">수신중..</string>
    <string name="myProfile">내 프로필</string>
    <string name="myFriend">친구 목록</string>
    <string name="edit">edit</string>
    <string name="call_log">통화 기록</string>
    <string name="change_item">변경</string>
    <string name="am">오전 </string>
    <string name="pm">오후 </string>
    <string name="time_flag"> : </string>
    <string name="yesterday">어제</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="phone">연락처</string>
    <string name="history">통화기록</string>
    <string name="record">저장소</string>
    <string name="first_color">#f9bb72</string>
    <string name="second_color">#dd6495</string>
    <string name="third_color">#72d3b4</string>
    <string name="name_check">이름을 입력해 주세요.</string>
    <string name="info_change">정보가 변경 되었습니다.</string>
    <string name="permission">해당 앱을 사용하려면 권한이 필요합니다."\n"설정 버튼을 눌러, 권한을 확인해주세요.</string>
    <string name="phone_number">연락처를 입력하세요</string>
    <string name="my_name">이름</string>
    <string name="status">상태메세지</string>
    <string name="status_check">상태메세지를 입력하세요.</string>
    <string name="number">전화번호</string>
    <string name="intro">연인, 친구, 가족들과"\n"재미있는 영상통화를 즐기세요.</string>
    <string name="name_eng">Name</string>
    <string name="number_eng">PhoneNumber</string>
    <string name="regist">REGIST INFO</string>
    <string name="call_num">통화횟수</string>
    <string name="total_time">총통화시간</string>
    <string name="exit">종료</string>
    <string name="convert">전환</string>
    <string name="effect">효과</string>
    <string name="heart">하트</string>
    <string name="mustache">콧수염</string>
    <string name="rabbit">토끼귀</string>
    <string name="effect_exit">효과 종료</string>
    <string name="video_call">영상 통화</string>
    <string name="to">To</string>
    <string name="from_call">From</string>
    <string name="count">회</string>
</resources>
