<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:padding="36dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        >
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="16"
        >
        <ImageView
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:layout_gravity="center"
            android:background="@drawable/moon" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:text="@string/sign_up_info"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:gravity="center"
            android:text="@string/intro"
            />
        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="10dp"
            app:mtf_cardCollapsedHeight="3dp"
            app:mtf_hasFocus="false"
            app:mtf_image="@drawable/ic_face"
            app:mtf_openKeyboardOnFocus="false">
            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_eng"
                android:maxLines="1"
                android:textColor="@color/gray"
                android:textColorHint="@android:color/white"
                android:textSize="12sp" />
        </com.github.florent37.materialtextfield.MaterialTextField>

        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="10dp"
            app:mtf_cardCollapsedHeight="3dp"
            app:mtf_hasFocus="false"
            app:mtf_image="@drawable/ic_phone"
            app:mtf_openKeyboardOnFocus="false">
            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number_eng"
                android:maxLines="1"
                android:textColor="@color/gray"
                android:textColorHint="@android:color/white"
                android:textSize="12sp" />
        </com.github.florent37.materialtextfield.MaterialTextField>

        <Button
            android:id="@+id/bt_regist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/regist"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:background="@drawable/border_curve"
            />
    </LinearLayout>

</LinearLayout>