<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:orientation="vertical"
        android:background="@drawable/background"></LinearLayout>


    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:src="@drawable/sample"
        app:civ_border_color="#ffffff"
        app:civ_border_width="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="12sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="275dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle"

                android:text="@string/number"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_gray"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle"
                android:text="@string/call_num"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_gray"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle"

                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/total_time"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_total_time"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_gray"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>